// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render <input> tag with type radio 1`] = `
<input
  class="Radio__StyledRadio-n880eg-0 feAtJX"
  type="radio"
/>
`;

exports[`<Radio /> should render correctly with custom props 1`] = `
<input
  class="Radio__StyledRadio-n880eg-0 ceokIa"
  type="radio"
/>
`;

exports[`<Radio /> should render correctly with default props 1`] = `
<input
  class="Radio__StyledRadio-n880eg-0 feAtJX"
  type="radio"
/>
`;
